TCC/TCC/force-app/main/default/objects/Documentacao__c/Documentacao__c.object-meta.xml
<CustomObject>
    <label>Documentação</label>
    <nameField>
        <label>Descrição da Documentação</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>