TCC/TCC/force-app/main/default/objects/Documentacao__c/fields/DataEmissao__c.field-meta.xml
<CustomField>
    <fullName>DataEmissao__c</fullName>
    <label>Data de Emissão do Documento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>