TCC/TCC/force-app/main/default/objects/Documentacao__c/fields/DocumentacaoProjeto__c.field-meta.xml
<CustomField>
    <fullName>DocumentacaoProjeto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Documentação do Projeto</label>
    <referenceTo>Projeto__c</referenceTo>
    <relationshipLabel>Documentação do Projeto</relationshipLabel>
    <relationshipName>Documentacao</relationshipName>
    <type>Lookup</type>
</CustomField>