TCC/TCC/force-app/main/default/objects/Documentacao__c/fields/EmitirDocumento__c.field-meta.xml
<CustomField>
    <fullName>EmitirDocumento__c</fullName>
    <description>Link para emitir uma nova versão do documento</description>
    <inlineHelpText>Link para emitir uma nova versão do documento</inlineHelpText>
    <label>Emitir Documento</label>
    <type>Url</type>
</CustomField>