TCC/TCC/force-app/main/default/objects/Documentacao__c/fields/IsInProjeto__c.field-meta.xml
<CustomField>
    <fullName>IsInProjeto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Faz parte de Projeto?</label>
    <type>Checkbox</type>
</CustomField>