TCC/TCC/force-app/main/default/objects/Documentacao__c/fields/NomeOSC__c.field-meta.xml
<CustomField>
    <fullName>NomeOSC__c</fullName>
    <label>OSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>