TCC/TCC/force-app/main/default/objects/Documentacao__c/fields/OutroTipoDocumentacao__c.field-meta.xml
<CustomField>
    <fullName>OutroTipoDocumentacao__c</fullName>
    <label>Outro Tipo de Documentação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>