TCC/TCC/force-app/main/default/objects/Documentacao__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atualizado</fullName>
            </value>
            <value>
                <fullName>Próximo ao Vencimento</fullName>
            </value>
            <value>
                <fullName>Desatualizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>