TCC/TCC/force-app/main/default/objects/Documentacao__c/fields/TipoDocumentacao__c.field-meta.xml
<CustomField>
    <fullName>TipoDocumentacao__c</fullName>
    <label>Tipo Documentação</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cartão do CNPJ</fullName>
            </value>
            <value>
                <fullName>Ata de Eleição</fullName>
            </value>
            <value>
                <fullName>Estatuto</fullName>
            </value>
            <value>
                <fullName>Regimento Interno</fullName>
            </value>
            <value>
                <fullName>Certificado de Regularidade Cadastral de Entidades – CRCE</fullName>
            </value>
            <value>
                <fullName>Certificado de Registro Cadastral – CRC</fullName>
            </value>
            <value>
                <fullName>Certidão Negativa de Débitos Federal (CND Federal)</fullName>
            </value>
            <value>
                <fullName>Certidão Negativa de Débitos Estadual (CND Estadual)</fullName>
            </value>
            <value>
                <fullName>Certidão Negativa de Débitos Municipal (CND Municipal)</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>