TCC/TCC/force-app/main/default/objects/Documentacao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DocumentacaoProjeto__c</columns>
    <columns>DataEmissao__c</columns>
    <columns>DataVencimento__c</columns>
    <columns>Status__c</columns>
    <columns>TipoDocumentacao__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>